[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/managers/Sound_Manager.gd" type="Script" id=1]
[ext_resource path="res://sound_assests/ui/menu/snd_ui_selection_change.wav" type="AudioStream" id=2]
[ext_resource path="res://sound_assests/ui/menu/snd_ui_selection_confirm.wav" type="AudioStream" id=3]
[ext_resource path="res://sound_assests/ui/notif/notif_heart_sub_tank.wav" type="AudioStream" id=4]
[ext_resource path="res://sound_assests/fx/sfx_explosion_standard_1.wav" type="AudioStream" id=5]
[ext_resource path="res://sound_assests/fx/sfx_explosion_standard_2.wav" type="AudioStream" id=6]
[ext_resource path="res://sound_assests/player/X/snd_player_x_buster_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://sound_assests/ui/menu/snd_ui_close.wav" type="AudioStream" id=8]
[ext_resource path="res://sound_assests/objects/snd_explosive_crate_beep.wav" type="AudioStream" id=9]
[ext_resource path="res://sound_assests/ui/hud/ui_health_rise.wav" type="AudioStream" id=10]
[ext_resource path="res://sound_assests/objects/snd_crate_fall.wav" type="AudioStream" id=11]
[ext_resource path="res://sound_assests/projectiles/snd_energy_exp.wav" type="AudioStream" id=12]
[ext_resource path="res://sound_assests/player/X/snd_player_nova_strike.wav" type="AudioStream" id=13]
[ext_resource path="res://sound_assests/player/Zero/snd_player_zero_saber_swing_3.wav" type="AudioStream" id=14]
[ext_resource path="res://sound_assests/player/Zero/snd_saber_hit.wav" type="AudioStream" id=15]
[ext_resource path="res://sound_assests/player/X/snd_player_x_buster_fire.wav" type="AudioStream" id=16]
[ext_resource path="res://sound_assests/player/X/snd_player_X_charge_loop.wav" type="AudioStream" id=17]
[ext_resource path="res://sound_assests/player/X/snd_player_x_buster_1_fire.wav" type="AudioStream" id=18]
[ext_resource path="res://sound_assests/player/X/snd_player_x_buster_2_fire.wav" type="AudioStream" id=19]
[ext_resource path="res://sound_assests/player/Zero/snd_player_zero_saber_swing_1.wav" type="AudioStream" id=20]
[ext_resource path="res://sound_assests/player/Zero/snd_player_zero_saber_swing_2.wav" type="AudioStream" id=21]
[ext_resource path="res://sound_assests/player/universal/snd_player_teleport_out.wav" type="AudioStream" id=22]
[ext_resource path="res://sound_assests/player/universal/snd_player_teleport_in.wav" type="AudioStream" id=23]
[ext_resource path="res://sound_assests/player/universal/snd_player_teleport_land.wav" type="AudioStream" id=24]
[ext_resource path="res://sound_assests/ui/notif/notif_01.wav" type="AudioStream" id=25]
[ext_resource path="res://sound_assests/projectiles/snd_hit_shield.wav" type="AudioStream" id=26]
[ext_resource path="res://sound_assests/projectiles/snd_launch_proj.wav" type="AudioStream" id=27]
[ext_resource path="res://sound_assests/objects/snd_machinery_move.wav" type="AudioStream" id=28]
[ext_resource path="res://sound_assests/ui/hud/ui_text_box_letter.wav" type="AudioStream" id=29]
[ext_resource path="res://sound_assests/player/Zero/snd_player_zero_buster_charge.wav" type="AudioStream" id=30]
[ext_resource path="res://sound_assests/player/Axl/snd_player_axl_copy.wav" type="AudioStream" id=31]
[ext_resource path="res://sound_assests/ui/menu/snd_ui_switch.wav" type="AudioStream" id=32]
[ext_resource path="res://sound_assests/player/universal/snd_player_footstep.wav" type="AudioStream" id=33]
[ext_resource path="res://sound_assests/ui/hud/ui_lock_on.wav" type="AudioStream" id=34]

[node name="Sound_Manager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="snd_ui_update_health" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 3.0
bus = "SFX"

[node name="snd_ui_lock_on" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = 3.0
bus = "SFX"

[node name="snd_ui_selection_change" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="snd_ui_selection_confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="snd_ui_tab_switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )
volume_db = -4.0
bus = "SFX"

[node name="snd_ui_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0
bus = "SFX"

[node name="snd_notif_item" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="snd_notif_01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
bus = "SFX"

[node name="snd_explosion_standard_01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -1.0
bus = "SFX"

[node name="snd_explosion_standard_02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -1.0
bus = "SFX"

[node name="snd_prj_x_buster_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="snd_hit_shield" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
bus = "SFX"

[node name="snd_prj_x_buster_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "SFX"

[node name="snd_prj_x_buster_1_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "SFX"

[node name="snd_prj_x_buster_2_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[node name="snd_prj_energy_exp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="snd_prj_launch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
bus = "SFX"

[node name="snd_prj_nova_strike" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "SFX"

[node name="snd_obj_ExpBox_beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -9.0
bus = "SFX"

[node name="snd_obj_Box_impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -2.0
bus = "SFX"

[node name="snd_obj_machine_move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -2.0
bus = "SFX"

[node name="snd_atta_saber_swing_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
bus = "SFX"

[node name="snd_atta_saber_swing_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
bus = "SFX"

[node name="snd_atta_saber_swing_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="snd_atta_saber_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[node name="snd_pl_x_charge" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 17 )
bus = "SFX"

[node name="snd_pl_footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
bus = "SFX"

[node name="snd_pl_axl_copy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
bus = "SFX"

[node name="snd_pl_zero_charge" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 30 )
bus = "SFX"

[node name="snd_pl_teleport_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "SFX"

[node name="snd_pl_teleport_land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
bus = "SFX"

[node name="snd_pl_teleport_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "SFX"

[node name="snd_ui_text" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
bus = "SFX"
